# Reverse_Time_Migration

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTORS.txt  README.md  clean_build.sh  config.sh  main_migration.cpp  main_modelling.cpp
OpenMp/: CMakeLists.txt
OpenMp/concrete-callbacks/: binary_writer.cpp  image_writer.cpp  norm_writer.cpp  norm_writer.h  segy_writer.cpp  segy_writer.h  writer_callback.cpp
OpenMp/concrete-components/: acoustic_second_components.h
OpenMp/concrete-components/boundary_managers/: cpml_boundary_manager.cpp  cpml_boundary_manager.h  no_boundary_manager.cpp  no_boundary_manager.h  random_boundary_manager.cpp  random_boundary_manager.h  sponge_boundary_manager.cpp  sponge_boundary_manager.h  staggered_cpml_boundary_manager.cpp  staggered_cpml_boundary_manager.h
OpenMp/concrete-components/computation_kernels/: README.md  second_order_computation_kernel.cpp  second_order_computation_kernel.h  staggered_computation_kernel.cpp  staggered_computation_kernel.h
OpenMp/concrete-components/correlation_kernels/: cross_correlation_kernel.cpp  cross_correlation_kernel.h
OpenMp/concrete-components/data_units/: acoustic_openmp_computation_parameters.h  acoustic_second_grid.h  staggered_grid.h
OpenMp/concrete-components/forward_collectors/: README.md  reverse_injection_propagation.cpp  reverse_injection_propagation.h  reverse_propagation.cpp  reverse_propagation.h  staggered_reverse_injection_propagation.cpp  staggered_reverse_injection_propagation.h  staggered_reverse_propagation.cpp  staggered_reverse_propagation.h  staggered_two_propagation.cpp  staggered_two_propagation.h  two_propagation.cpp  two_propagation.h
OpenMp/concrete-components/model_handlers/: homogenous_model_handler.cpp  homogenous_model_handler.h  seismic_model_handler.cpp  seismic_model_handler.h
OpenMp/concrete-components/source_injectors/: README.md  ricker_source_injector.cpp  ricker_source_injector.h
OpenMp/concrete-components/trace_managers/: binary_trace_manager.cpp  binary_trace_manager.h  seismic_trace_manager.cpp  seismic_trace_manager.h
OpenMp/concrete-parsers/: acoustic_omp_parameter_parser.cpp  callback_parser.cpp  configuration_parser.cpp
OpenMp/concrete-parsers/components/: boundary_manager_parser.cpp  boundary_manager_parser.h  correlation_kernel_parser.cpp  correlation_kernel_parser.h  forward_collector_parser.cpp  forward_collector_parser.h  model_handler_parser.cpp  model_handler_parser.h  modelling_configuration_parser_parser.cpp  modelling_configuration_parser_parser.h  source_injector_parser.cpp  source_injector_parser.h  trace_manager_parser.cpp  trace_manager_parser.h  trace_writer_parser.cpp  trace_writer_parser.h
dpcpp/: CMakeLists.txt
dpcpp/concrete-callbacks/: binary_writer.h  csv_writer.cpp  csv_writer.h  image_writer.h  norm_writer.cpp  su_writer.cpp  su_writer.h  writer_callback.cpp  writer_callback.h
dpcpp/concrete-components/: README.md  acoustic_second_components.h
dpcpp/concrete-components/boundary_managers/: README.md  no_boundary_manager.cpp  no_boundary_manager.h  random_boundary_manager.cpp  random_boundary_manager.h
dpcpp/concrete-components/computation_kernels/: second_order_computation_kernel.cpp  second_order_computation_kernel.h
dpcpp/concrete-components/correlation_kernels/: cross_correlation_kernel.cpp  cross_correlation_kernel.h
dpcpp/concrete-components/data_units/: acoustic_dpc_computation_parameters.h  acoustic_second_grid.h
dpcpp/concrete-components/forward_collectors/: reverse_propagation.cpp  reverse_propagation.h
dpcpp/concrete-components/model_handlers/: README.md  homogenous_model_handler.cpp  homogenous_model_handler.h  seismic_model_handler.cpp  seismic_model_handler.h
dpcpp/concrete-components/source_injectors/: ricker_source_injector.cpp  ricker_source_injector.h
dpcpp/concrete-components/trace_managers/: README.md  binary_trace_manager_oneApi.cpp  binary_trace_manager_oneApi.h  seismic_trace_manager.cpp  seismic_trace_manager.h
dpcpp/concrete-parsers/: callback_parser.cpp  configuration_parser.cpp  parameter_parser.cpp
dpcpp/concrete-parsers/components/: boundary_manager_parser.cpp  boundary_manager_parser.h  (+14 more)
libs/BSBase/: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  README.md  TODO.md  clean_build.sh  config.sh
libs/BSIO/: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  CMakeLists.txt  README.md  config.sh
libs/BSTimer/: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.rst  CMakeLists.txt  README.md  TODO.md  clean_build.sh  config.sh
libs/Helpers/: .gitignore  CMakeLists.txt
libs/SeismicOperations/: CHANGELOG.rst  CMakeLists.txt  README.md
libs/Thoth/: CMakeLists.txt
rtm-framework/: .gitignore  CMakeLists.txt  README.md  test_migration.cpp  test_modelling.cpp
rtm-framework/dummy_components/: README.md  dummy_components.h
seismic-io-framework/: CMakeLists.txt  datatypes.cpp  datatypes.h
seismic-io-framework/IO/: io_manager.h
seismic-io-framework/Segy/: CMakeLists.txt  segy_helpers.cpp  segy_helpers.h  segy_io_manager.cpp  segy_io_manager.h  segyelement.h  suheaders.cpp  suheaders.h  susegy.cpp  susegy.h  swapbyte.cpp  swapbyte.h  test_segy.cpp
seismic-io-framework/manipulation/: manipulation.cpp  manipulation.h
seismic-io-framework/visualization/: CMakeLists.txt  visualization.cpp  visualization.h
src/: CMakeLists.txt
src/agents/: CMakeLists.txt
src/generators/: CMakeLists.txt  Generator.cpp
src/parsers/: ArgumentsParser.cpp  CMakeLists.txt  Parser.cpp
src/utils/: CMakeLists.txt
src/writers/: CMakeLists.txt
tests/: CMakeLists.txt  test_main.cpp
tests/agents/: CMakeLists.txt
tests/generators/: CMakeLists.txt  TestGenerator.cpp
tests/parsers/: CMakeLists.txt  TestParser.cpp
tools/: CMakeLists.txt
tools/cmp/: Comparator.cpp
utils/: CMakeLists.txt  cmd_parser_utils.cpp  cmd_parser_utils.h  compare_csv.cpp  csv_to_png.cpp  noise_filtering.cpp  noise_filtering.h  post_process.cpp  read_utils.cpp  read_utils.h  write_utils.cpp  write_utils.h
zfp-compression/: .gitignore  CMakeLists.txt  compress.cpp  compress.h  main_compress.cpp
(+935 files in other folders)
